--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,5 +1,6 @@
 .carousel-control-prev-icon, .carousel-control-next-icon{ 
-    background-color: black;
+    background-color: #3338;
+    border-radius: 50%;
 }
 
 #carouselExampleIndicators{
