--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,20 +2,19 @@
     padding: 30px !important;
     font-size: large !important;
     background-color: #fefefe !important;
-    box-shadow: 0 0 20px 0 #666 !important;
+    box-shadow: 0 0 20px 0 #aaa !important;
     justify-content: space-around !important;
 }
 
 .nav-link{
     color: #37a !important;
     margin: 0 5px;
-    padding: 10px;
 }
 
 .active{
-    color: #37a !important;
-    border: 1px solid #37a !important;
+    color: #fff !important;
     border-radius: 8px ;
+    background-color: #37a !important;
 }
 
 .nav-link:hover{
@@ -24,7 +23,12 @@
     border-radius:  8px !important;
 }
 
+.carousel-inner{
+    box-shadow: 0 0 8px 0 #aaa !important;
+}
+
 
 #navbarNavDropdown{
     text-align: center;
 }
+
