--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,20 +7,20 @@
 }
 
 .nav-link{
-    color: #37a !important;
     margin: 0 5px;
+    transition: ease-in-out 0.3s;
+    border-radius: 8px;
 }
 
 .active{
-    color: #fff !important;
-    border-radius: 8px ;
-    background-color: #37a !important;
+    color: #21252d;
+    box-shadow: 0 0 10px 0 #bbb;
 }
 
 .nav-link:hover{
-    background-color: #37a;
-    color: #fff !important;
-    border-radius:  8px !important;
+    color: #212529;
+    box-shadow: 0 0 10px 0 #bbb;
+    border-radius: 8px;
 }
 
 .carousel-inner{
