--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   overflow:scroll;
   overflow-x: hidden;
+  font-family: sans-serif;
 }
 
 #root{
@@ -16,13 +17,13 @@ body{
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: #37a4;
+    background-color: #2125296c;
     border-radius: 8px;
     border: 3px solid #f1f1f1;
   }
   
   ::-webkit-scrollbar-thumb:hover {
-    background: #37a;
+    background: #212529;
   }
   
   /* Para Firefox */
