--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -13,7 +13,8 @@
 .nav-link{
     margin: 0 5px;
     transition: ease-in-out 0.3s;
-    border-radius: 8px;
+    border-radius: 2px;
+    transition: transform 0.2s;
 }
 
 .activeheader{
@@ -24,9 +25,10 @@
 
 .nav-link:hover{
     color: #fefefe !important;
-    background-color: #734b35;
-    box-shadow: 0 0 10px 0 #bbb;
-    border-radius: 8px;
+    background-color: #734b35f0;
+    box-shadow: 0 0 8px 0 #bbb;
+    border-radius: 2px;
+    transform: scale(1.08);
 }
 
 
