--- a/src/components/Contacto/contacto.css
+++ b/src/components/Contacto/contacto.css
@@ -2,9 +2,7 @@
     max-width: 600px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px 0 #ae9787aa;
+    box-shadow: 0 0 5px 0 #ae978769;
     background-color: #f9f9f9;
     margin-bottom: 30px;
   }
@@ -28,7 +26,7 @@
   }
   
   .form-group textarea {
-    resize: vertical;
+    resize: none;
     height: 150px;
   }
   
@@ -44,12 +42,12 @@
     background-color: #3498db;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 3px;
     cursor: pointer;
     font-size: 1em;
   }
   
-  button:hover {
+  form button:hover {
     background-color: #2980b9;
   }
   
@@ -60,7 +58,7 @@
     background-color: #25D366 ;
     color: white ;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 3px;
     text-decoration: none;
     font-size: 1em ;
     margin-left: 10px;
