--- a/src/components/IconoFlotanteWhatsapp/iconoflotante.css
+++ b/src/components/IconoFlotanteWhatsapp/iconoflotante.css
@@ -3,10 +3,12 @@
     margin-right: 3%;
     box-sizing: border-box;
     width: 50px;
+    transition: transform 0.2s;
 }
 
 #whatsapp:hover{
-    filter: drop-shadow(0px 0px 4px #999);
+    filter: drop-shadow(0px 0px 3px #28d439);
+    transform: scale(1.1);
 }
 
 @keyframes slideInFromRight {
