--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -15,12 +15,11 @@
     max-width: 1200px;
     background-color: #fff;
     padding: 20px;
-    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
   .product-detail img {
-    max-width: 50%;
+    max-width: 500px;
     border-radius: 10px;
     margin-bottom: 20px;
   }
