--- a/src/components/catalogo/CatalogStyle.css
+++ b/src/components/catalogo/CatalogStyle.css
@@ -1,6 +1,8 @@
+  .margin-top{
+    margin-top: 120px;
+  }
   .sillah1 {
     text-align: center;
-    margin-top: 120px;
     font-size: 2.5em;
     color: #734b35;
     background: linear-gradient(to right, #ae9787, #734b35);
@@ -17,6 +19,7 @@
     padding: 20px;
     max-width: 1000px;
     margin: 0 auto;
+    margin-bottom: 30px;
   }
   
   /* Estilos para cada tarjeta de silla */
