--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -3,8 +3,8 @@
 }
 
 .carousel-inner{
-    margin-top: 110px;
-    margin-bottom: 30px;
+    margin-top: 86px;
+    margin-bottom: 0;
 }
 
 #carouselExampleIndicators{
