--- a/src/components/catalogo/CatalogStyle.css
+++ b/src/components/catalogo/CatalogStyle.css
@@ -1,5 +1,6 @@
   .margin-top{
-    margin-top: 120px;
+    margin-top: 60px;
+    background:scroll linear-gradient(to bottom, #eee, #fff)
   }
   .sillah1 {
     text-align: center;
@@ -14,12 +15,11 @@
   /* Contenedor de la grilla */
   .catalogo {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-    gap: 20px;
-    padding: 20px;
-    max-width: 1000px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
+    padding: 60px;
+    max-width: 1200px;
     margin: 0 auto;
-    margin-bottom: 30px;
   }
   
   /* Estilos para cada tarjeta de silla */
