--- a/src/components/Contacto/contacto.css
+++ b/src/components/Contacto/contacto.css
@@ -68,3 +68,28 @@
     background-color: #1DA851 ;
   }
   
+  .input-group select,
+.input-group input {
+  border: 1px solid #ccc;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+}
+
+.input-group-text {
+  background-color: #e9ecef;
+  border: 1px solid #ced4da;
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.25rem 0 0 0.25rem;
+}
+
+input[type="text"] {
+  border: 1px solid #ced4da;
+  padding: 0.375rem 0.75rem;
+  border-radius: 0 0.25rem 0.25rem 0;
+  flex: 1;
+}
