fix: quite el formulario de contacto en mainpage

--- a/src/components/sponsors/sponsor.css
+++ b/src/components/sponsors/sponsor.css
@@ -1,6 +1,6 @@
 .Sponsors{
     margin: auto;
-    display: none; /*Valor para que se muestre es flex, para ocultarlo none*/
+    display: flex; /*Valor para que se muestre es flex, para ocultarlo none*/
     justify-content: space-evenly;
 }
 
