--- a/src/components/catalogo/CatalogStyle.css
+++ b/src/components/catalogo/CatalogStyle.css
@@ -26,11 +26,20 @@
   .silla:hover {
     transform: scale(1.05);
   }
+
+  .silla-imagen-container{
+    overflow: hidden;
+  }
   
   .silla-imagen {
     width: 100%;
     height: auto;
     border-radius: 8px 8px 0 0;
+    transition: transform 0.2s;
+  }
+
+  .silla-imagen:hover{
+    transform: scale(1.3);
   }
   
   .silla h2 {
