--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -11,11 +11,31 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 1200px;
+    max-width: 1300px;
     background-color: #fff;
     padding: 20px;
   }
+
+  .img-container {
+    position: relative;
+    overflow: hidden;
+    cursor: zoom-in;
+  }
   
+  .img-container img {
+    width: 100%;
+    transition: transform 0.4s ease;
+  }
+  
+  .img-container.zoom img {
+    cursor: zoom-out;
+  }
+  
+  .img-container.zoom img {
+    transform: scale(1.8); /* Ajusta el valor según el nivel de zoom deseado */
+  }
+  
+
   .product-detail img {
     max-width: 500px;
     border-radius: 4px;
